[metadata]
name = logonbox-authenticator-python
version = 0.0.1
author = Brett Smith
author_email = brett@logonbox.com
description = LogonBox Authenticator API for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nervepoint/logonbox-authenticator-python
project_urls =
    Bug Tracker = https://github.com/nervepoint/logonbox-authenticator-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache 2
    Operating System :: OS Independent

[options]
packages = src/lba
install_requires =
    Cryptodome
    ed25519